# rag-project

./: .gitignore  app.py  frontend.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
app/services/: rag.py  rag_pipeline.py
db/chroma/: chroma.sqlite3
modules/: chunking.py  embeddings.py  rag_service.py
